pages/Search/Search.css
/* Classes */
@import 'blockquote.css';
@import 'button.css';
@import 'citation.css';
@import 'cite.css';
@import 'gloss.css';
@import 'help-text.css';
@import 'label.css';
@import 'pre.css';
@import 'text-box.css';

/* Components */
@import './components/pagination/pagination.css';

/* Utility Classes */

:root {
  --cell-border:  1px solid #CCC;
  --thick-border: 2px solid black;
}

.sticky {
  align-items:     center;
  inline-size:     100vw;
  inset-inline:    0;
  max-inline-size: 100vw;
  position:        sticky;
}

/* Cell-Specific Styles */

/* bottom border */
.bb {
  border-block-end: var(--cell-border);
}

/* Multi-Element Styles */

:is(.form, .source-forms, .source-URs, .UR) {
  white-space: nowrap;
}

/* Element-Specific Styles */

body {
  inline-size:     fit-content !important;
  max-inline-size: 100vw;
  min-inline-size: 100vw;
  overflow-x:      auto !important;
}

.checkbox-field {
  align-items:    center;
  flex-direction: row;
}

.citation {

  margin:      0;
  padding:     1em;

  & blockquote {
    max-inline-size: 45em;
  }

}

.complex-searches {
  text-align: justify;
}

#download-buttons {

  flex-direction: row;
  gap:            0.25em;

  & button {
    align-items:     center;
    display:         flex;
    flex-direction:  row;
    gap:             0.25em;
    inline-size:     4.5em;
    justify-content: center;
    margin:          0.25em;
  }

}

.download-icon {
  --icon-size: 1em;
  block-size:  var(--icon-size);
  inline-size: var(--icon-size);
}

/* NB: The .sticky class is applied conditionally in the footer Handlebars template. */
.footer {

  align-self: flex-start;
  display:    flex;

  > * {
    max-inline-size: 45em;
  }

}

h2 {
  text-align: center;
}

.hint {
  display: none;
}

.horizontal-fields {

  @media (width <= 45em) {
    label {
      margin-block-start: 0.5em;
    }
  }

  @media (width >= 45em) {
    align-items:           baseline;
    display:               grid;
    grid-auto-rows:        2em;
    grid-template-columns: 10em auto;
    row-gap:               0.5em;
  }

}

hr {
  all:              revert;
  inline-size:      80%;
  margin-block-end: 0;
}

.info-icon {
  --icon-size: 0.75em;
  block-size:  var(--icon-size);
  inline-size: var(--icon-size);
}

.info-link {
  display: flex;
}

.inline-select {
  font-size:   medium;
  inline-size: fit-content !important;  /* Override rule for .text-box class. */
}

.inline-select-field {
  align-items:    baseline;
  flex-direction: row;
}

input[type=checkbox] {
  all:          revert;
  accent-color: var(--berry-blue);
  cursor:       pointer;
}

.issue-link {
  inset-inline-end: 0;
  position:         sticky;
}

label {
  cursor:      pointer;
  white-space: nowrap;
}

.legend {
  font-weight: bold;
  text-align:  center;
}

.limit-select-field {
  justify-content: center;
}

.logic-select-field {
  justify-content: flex-start;
}

#main {
  align-items:     flex-start;
  align-self:      stretch;
  max-inline-size: 100vw;
  padding:         0;
}

.meta-row th {
  padding:    var(--text-padding);
  text-align: center;
}

.num-results {
  font-size:     x-large;
  margin-inline: auto;
  text-align:    center;
}

.partial-width-bb {
  box-shadow: 0px 15px 0px -14px black;
}

.priority {
  align-items:        center;
  background-color:   var(--pink-swan);
  block-size:         1em;
  border-radius:      50%;
  color:              black;
  content:            attr(data-priority);
  display:            flex;
  font-size:          small;
  inline-size:        1em;
  inset-block-start:  0;
  inset-inline-start: 0;
  justify-content:    center;
  padding:            0.75em;
  position:           absolute;
  text-align:         center;
  transform:          translate(50%, -50%);
  vertical-align:     middle;
}

#results {

  border-collapse: separate; /* This is necessary for borders to stay fixed with position: sticky */
  margin:          0;
  min-inline-size: 100vw;

  & td {
    border-block-end: var(--cell-border);
    padding:          var(--text-padding);
    word-break:       keep-all;
  }

  /* Separator between component and sources fields */
  :is(td, th):nth-child(6) {
    border-inline-end: var(--thick-border);
  }

  & th {
    font-weight: bold;
    position:    relative;
  }

  & thead {

    background-color: white;
    position:         sticky;
    top:              0;
    z-index:          2;

    @media (prefers-color-scheme: dark) {
      background-color: var(--off-black);
    }

  }

  & thead tr:last-child {

    box-shadow: 0px 5px 5px -5px rgb(0 0 0 / 50%);

    @media (prefers-color-scheme: dark) {
      box-shadow: 0px 5px 5px -5px rgb(255 255 255 / 50%);
    }

  }

  & thead tr:last-child th {

    border-block: 1px solid black;

    @media (prefers-color-scheme: dark) {
      border-block: 1px solid white;
    }

  }

}

#results-info {
  padding: 1em;
}

.results-wrapper {
  inline-size:     100vw;
  max-inline-size: 100vw;
}

search {
  display:         flex;
  flex-direction:  column;
  max-inline-size: 30em;
  padding-inline:  1em;
}

.search-controls {
  flex-direction:  row;
  flex-wrap:       wrap;
  gap:             0.5em;
  justify-content: center;
  margin:          0.5em;
}

.search-form {

  gap:             1em;
  max-inline-size: 35em;

  & button {
    inline-size: 7em;
  }

}

#search-mode {

  display:         flex;
  flex-direction:  row;
  font-size:       x-large;
  gap:             0.5em;
  justify-content: center;
  padding:         1em;

  & label {
    align-items:    baseline;
    flex-direction: row;
    padding:        0;
  }

  & [type=radio] {
    --radio-size: 1em;
    all:          revert;
    accent-color: var(--berry-blue);
    block-size:   var(--radio-size);
    inline-size:  var(--radio-size);
  }

}

#search-mode:has([value=quick]:checked) ~ .advanced-search {
  display: none;
}

#search-mode:has([value=advanced]:checked) ~ .quick-search {
  display: none;
}

select {

  all:           revert;                    /* Use default browser styles. */
  border-radius: var(--border-radius);
  cursor:        pointer;
  font-family:   'Times New Roman', serif;  /* This is necessary because the adjustments to ligatures don't apply within the <select> element. */
  font-size:     100%;
  line-height:   1.5;
  padding:       0.25em;

  @media (prefers-color-scheme: dark) {
    background-color: var(--off-black);
    color:            var(--off-white);
  }

}

.sort-button {
  align-items:    center;
  cursor:         pointer;
  display:        flex;
  flex-direction: row;
  gap:            0.25em;
  inline-size:    100%;
  text-align:     center;
}

.sort-button:hover {
  background-color: var(--martinique);
  color:            var(--off-white);
}

:is(.sort-button, .simple-th) {
  padding:     var(--text-padding);
  white-space: nowrap;
  word-break:  keep-all;
}

.sort-icon {
  --icon-size: 0.75em;
  block-size:  var(--icon-size);
  inline-size: var(--icon-size);
}

.source-fields {

  .help-text {
    text-align: center;
  }

  .horizontal-fields {
    margin-block: 0.5em;
  }

}

.source-glosses {
  max-inline-size: 15em; /* Just took up too much visual space in the table. Was unaesthetic. */
}

.stats {

  display:               grid;
  grid-template-columns: auto auto;
  justify-content:       center;

  * {
    padding: var(--text-padding);
  }

  dt {
    font-weight: bold;
  }

}

.text-box {
  block-size:  1.75em;
  inline-size: 100%;
}

.th-note {
  font-weight: normal;
}

